# sample-rds-db2-tools

./: .gitignore  README.md
AI-Skills/: README.md  rds-db2.skill
AI-Skills/rds-db2-deployer/: .gitignore  README.md  SKILL.md  account-defaults.example.json  pyproject.toml
AI-Skills/rds-db2-deployer-gitops/: .gitignore  README.md  account-defaults.example.json
AI-Skills/rds-db2-deployer/artifacts/: .gitkeep
AI-Skills/rds-db2-deployer/references/: .gitkeep  account-defaults.md  credentials.md  gitops-and-policy.md  ibm-licensing.md  intent-and-tiers.md  intent-schema.md  security-invariants.md  storage-iops-throughput.md  terraform-composition.md  vpc-prechecks.md
AI-Skills/rds-db2-deployer/schemas/: .gitkeep  __init__.py  account-defaults.schema.json  deployment-intent.schema.json
AI-Skills/rds-db2-deployer/scripts/: __init__.py  account_defaults.py  artifacts.py  credentials.py  engine_versions.py  gitops.py  instance_specs.py  policy_gate.py  render_terraform.py  resolve_intent.py  validate_intent.py  verify.py  vpc_precheck.py
AI-Skills/rds-db2-deployer/scripts/eval/: __init__.py  _capabilities_report.py  baseline_pipeline.py  capabilities_pipeline.py  live_baseline.py  live_capabilities.py  preflight.py
AI-Skills/rds-db2-deployer/scripts/tests/: conftest.py  test_account_defaults.py  test_artifacts.py  test_credentials.py  test_edition_resolver.py  test_engine_versions.py  test_eval_baseline.py  test_eval_capabilities.py  test_gitops.py  test_gitops_properties.py  test_identifier_builder.py  test_policy_gate.py  test_preflight.py  test_render_integration.py  test_render_mandatory_tags.py  test_render_optional_capabilities.py  test_render_reuse_and_security.py  test_render_terraform.py  test_resolver_properties.py  test_scaffold.py  test_schema_conditionals.py  test_schema_property.py  test_sizing_map.py  test_sizing_overrides.py  test_sizing_properties.py  test_tier_resolver.py  test_validate_schema.py  test_validate_security_invariants.py  test_validate_storage_arithmetic.py  test_validator_properties.py  test_verify.py  test_vpc_precheck_severity.py  test_vpc_precheck_smoke.py
AI-Skills/rds-db2-deployer/templates/gitops-repo/: README.md  account-defaults.json
AI-Skills/rds-db2-deployer/templates/terraform/: .gitkeep
examples/: README.md
examples/ssl/: Db2SSLTest.java  README.md  check-ssl-connectivity.sh  compile_and_run.sh  get-rds-db2-root-cert.sh
tools/: README.md
tools/End-to-End-Trust/: README.md  TROUBLESHOOTING.md  cleanup.sh  sample-mapping.txt  setup-plugin-cache.sh  terraform-service-account-policy.json
tools/RDS-Db2-Dashboard/: .gitignore  README.md  db2mon-airgap.sh  db2mon-cleanup.sh  (+2 more)
(+133 files in other folders)
