[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rds-db2-provision-skill"
version = "0.3.3"
description = "Terraform composer/orchestrator scripts for the rds-db2-provision-skill (resolvers, validator, VPC precheck, composer, policy gate)."
readme = "README.md"
requires-python = ">=3.11"

# Runtime dependencies for the skill's scripts. Pinned to exact, recent stable
# releases for reproducibility (truth-grounding requirement: deterministic,
# reproducible tooling).
dependencies = [
    "jsonschema==4.23.0",
    "boto3==1.35.76",
]

[project.optional-dependencies]
# Local dev + CI: property-based tests (Hypothesis) run by pytest.
dev = [
    "hypothesis==6.122.3",
    "pytest==9.0.3",
]

[tool.setuptools]
packages = ["scripts", "schemas"]

[tool.setuptools.package-data]
# Ship the JSON Schemas so an installed wheel (gitops CI uses
# `pip install git+...#subdirectory=AI-Skills/rds-db2-deployer`) can resolve
# `<package_root>/schemas/*.schema.json` at validation time. Without this the
# schemas live only in a source checkout and `python -m scripts.validate_intent`
# / `scripts.account_defaults` / `scripts.policy_gate` fail with FileNotFoundError.
schemas = ["*.json"]

[tool.pytest.ini_options]
# Tests live alongside the scripts package.
testpaths = ["scripts/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra"
